--- a/backend/microservice3-api-gateway/src/main/resources/application.properties
+++ b/backend/microservice3-api-gateway/src/main/resources/application.properties
@@ -14,6 +14,12 @@ spring.jpa.show-sql=true
 
 eureka.client.enabled=true
 
+#Key depends on JWT algorithm; If RSA => needs public, private; if HMAC => needs only single key...
+app.jwt.secret=RandomSecretKey1234567890!RandomSecretKey1234567890!RandomSecretKey1234567890!RandomSecretKey1234567890!
+
+#1 day
+app.jwt.expiration-in-ms=86400000
+
 
 #should be same with other microservices.
 service.security-secure-key-username=randomSecureKeyUsername!
